--- a/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
@@ -22,6 +22,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.WinForms.XML</DocumentationFile>
+    <LangVersion>3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
