--- a/MarcelJoachimKloubert.CLRToolbox.40.Web/MarcelJoachimKloubert.CLRToolbox.40.Web.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40.Web/MarcelJoachimKloubert.CLRToolbox.40.Web.csproj
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.Web.XML</DocumentationFile>
+    <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
