--- a/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
@@ -26,6 +26,7 @@
     <Prefer32Bit>false</Prefer32Bit>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CLRToolbox.WPF.XML</DocumentationFile>
+    <LangVersion>5</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
