--- a/MarcelJoachimKloubert.CLRToolbox.20.Web/MarcelJoachimKloubert.CLRToolbox.20.Web.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20.Web/MarcelJoachimKloubert.CLRToolbox.20.Web.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>bin\MarcelJoachimKloubert.CLRToolbox.Web.XML</DocumentationFile>
+    <LangVersion>ISO-2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
