serialization, fixes and cleanups
- ADD: CommonSerializer that uses embedded JSON.NET
- FIX: documentation fixes
- CHG: code cleanups

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -589,6 +589,7 @@
     <Compile Include="Security\Cryptography\Passwords\GeneralPasswordHasher.cs" />
     <Compile Include="Security\Cryptography\Passwords\IPasswordHasher.cs" />
     <Compile Include="Security\UsernamePasswordValidator.cs" />
+    <Compile Include="Serialization\CommonSerializer.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Serialization\Json\JsonParameterResult.cs" />
     <Compile Include="Serialization\Json\SimpleJsonResult.cs" />
