diagnostics, helper methods, improvements, fixes and cleanups
- CHG: can handle trees / workflows of logger commands now
- CHG: if a logger command failed the exceptions are thrown as
AggregateException now
- ADD: Any collection helper method
- CHG: code cleanups and improvements
- FIX: documentation fixes
- CHG: code improvements
- CHG: added SerializableAttribute to RemoteLogMessage and
RemoteLogMessageSender classes

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -151,6 +151,9 @@
     <Compile Include="Factories\EqualityComparerFactory.Strings.cs">
       <DependentUpon>EqualityComparerFactory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CollectionHelper.Any.cs">
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\CollectionHelper.Cast.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
