--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
@@ -1257,5 +1257,8 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\IO\TextWriterWrapperBase.cs">
       <Link>IO\TextWriterWrapperBase.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Any.cs">
+      <Link>Helpers\CollectionHelper.Any.cs</Link>
+    </Compile>
   </ItemGroup>
 </Project>
