--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
@@ -66,6 +66,7 @@
     <Folder Include="Values\" />
     <Folder Include="Properties\" />
     <Folder Include="_Embedded\" />
+    <Folder Include="Execution\Workflows\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\_Compatibility\System\Action.cs">
@@ -1259,6 +1260,21 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Any.cs">
       <Link>Helpers\CollectionHelper.Any.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.All.cs">
+      <Link>Helpers\CollectionHelper.All.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\DelegateWorkflow.cs">
+      <Link>Execution\Workflows\DelegateWorkflow.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\IWorkflow.cs">
+      <Link>Execution\Workflows\IWorkflow.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\IWorkflowExecutionContext.cs">
+      <Link>Execution\Workflows\IWorkflowExecutionContext.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\SimpleWorkflowExecutionContext.cs">
+      <Link>Execution\Workflows\SimpleWorkflowExecutionContext.cs</Link>
     </Compile>
   </ItemGroup>
 </Project>
