--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -147,9 +147,16 @@
     <Compile Include="Execution\Functions\IFunction.cs" />
     <Compile Include="Execution\Functions\IFunctionExecutionContext.cs" />
     <Compile Include="Execution\Functions\IFunctionLocator.cs" />
+    <Compile Include="Execution\Workflows\DelegateWorkflow.cs" />
+    <Compile Include="Execution\Workflows\IWorkflow.cs" />
+    <Compile Include="Execution\Workflows\IWorkflowExecutionContext.cs" />
+    <Compile Include="Execution\Workflows\SimpleWorkflowExecutionContext.cs" />
     <Compile Include="Factories\EqualityComparerFactory.cs" />
     <Compile Include="Factories\EqualityComparerFactory.Strings.cs">
       <DependentUpon>EqualityComparerFactory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\CollectionHelper.All.cs">
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CollectionHelper.Any.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
@@ -975,6 +982,7 @@
     <Compile Include="Helpers\CollectionHelper.Empty.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <None Include="Execution\Workflows\Workflows.cd" />
     <None Include="MarcelJoachimKloubert.CLRToolbox.snk" />
     <EmbeddedResource Include="_Embedded\ICSharpCode.SharpZLib\doc\ReadMe.rtf" />
   </ItemGroup>
